# pixel_display

./: CMakeLists.txt  LICENSE
src/: buffer.h  types.h  version.cpp.in  version.h
src/fonts/: font.cc  font.h  sinkin.h
src/icons/: example.h
src/pixel_display/: font_table.h  metrics.h  pixel_font.h  simple_encoding.h  utf8.h
src/pixel_display/detail/: index_of.h  string_span.h
src/pixel_display/encoding/: simple.h
src/pixel_display/fonts/: helvR10.h  helvR14.h  skinny_clock.h
src/pixel_display/output/: buffer.h
src/pixel_display/type/: bit_map.h  data.h  dimensions.h  encoding.h
test/: UTF8_decoder_capability_and_stress_test.txt  catch.cc  font_table.cc  helv.cc  skinny_clock.cc  utf8.cc  util.h
tests/: catch.cc  fakeit.h  test_utils.cc  test_utils.h  unit_test_display_buffer.cc  unit_test_font.cc  unit_test_icons.cc
tools/: bdf_converter.cpp
